--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
     "bootstrap": "^5.2.0",
     "ngx-echarts": "^14.0.0",
     "rxjs": "~7.5.0",
+    "swiper": "^8.4.7",
     "tslib": "^2.3.0",
     "zone.js": "~0.11.4"
   },
